--- a/package.json
+++ b/package.json
@@ -5,15 +5,18 @@
   "engines": {
     "node": "10.x"
   },
-  "main": "mtproxy.js",
+  "main": "index.js",
   "scripts": {
-    "start": "pm2 start mtproxy.js -i max",
+    "start": "node index.js",
+    "test": "node test.js"
   },
   "dependencies": {
     "ejs": "^2.5.6",
     "express": "^4.15.2"
   },
   "devDependencies": {
+    "request": "^2.81.0",
+    "tape": "^4.7.0"
   },
   "repository": {
     "type": "git",
@@ -21,7 +24,8 @@
   },
   "keywords": [
     "node",
-    "heroku"
+    "heroku",
+    "express"
   ],
   "license": "MIT"
 }
