--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   },
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "node test.js"
+    "start": "pm2 start mtproxy.js -i max",
+    "test": "pm2 start mtproxy.js -i max"
   },
   "dependencies": {
     "ejs": "^2.5.6",
