--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "engines": {
     "node": "10.x"
   },
-  "main": "index.js",
+  "main": "mtproxy.js",
   "scripts": {
     "start": "pm2 start mtproxy.js -i max",
     "test": "pm2 start mtproxy.js -i max"
